# insilico

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
data/: test.h5
include/: delay.h  funtools.h  funtools.hpp  gaussFunctions.h  insilico.hpp  kernels.cuh  predictor.hpp
src/: CMakeLists.txt  funtools.cc  hdf5_interface.cc  insilico.cc  kernels.cu  main.cc  main.cpp
src/tests/: CMakeLists.txt  test_eigen.cc
